# lsb3-logic-solver

./: .gitignore  README.md  stack.yaml  thesis.cabal
app/: Generator.hs  Main.hs  Prof.hs
bench/: Benchmark.hs  ex1  ex10  ex2  ex3  ex4  ex5  ex6  ex7  ex8  ex9
qml/: InputButton.qml  main.qml
src/: CNF.hs  Lib.hs  Logic.hs  Main.hs  NF.hs  Parser.hs  SAT.hs  Thesis.hs
test/: CNFSpec.hs  NFSpec.hs  NaiveSpec.hs  ParserSpec.hs  SatSpec.hs
