name:                thesis
version:             0.1.0.0
-- synopsis:
-- description:
-- homepage:            https://github.com/githubuser/thesis#readme
license:             BSD3
license-file:        LICENSE
author:              Przemysław Kopański
maintainer:          P.Kopanski@stud.elka.pw.edu.pl
copyright:           2017 Przemysław Kopański
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable thesis
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  ghc-options:         -Wall
  build-depends:       base >= 4.7 && < 5
                     , unordered-containers
