name:                thesis
version:             0.1.0.0
-- synopsis:
-- description:
-- homepage:            https://github.com/githubuser/thesis#readme
license:             BSD3
license-file:        LICENSE
author:              Przemysław Kopański
maintainer:          P.Kopanski@stud.elka.pw.edu.pl
copyright:           2017 Przemysław Kopański
category:            Web
build-type:          Simple
cabal-version:       >=1.10 && < 1.25
extra-source-files:  README.md

library
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall -O2
  exposed-modules:     Logic, CNF, SAT, Lib, Parser
  build-depends:       base >= 4.7 && < 5
                     , unordered-containers
                     , containers
                     , split
                     , text
                     , parsec


executable thesis
  hs-source-dirs:      app
  main-is:             Main.hs
  default-language:    Haskell2010
  ghc-options:         -Wall -O2
  build-depends:       base >= 4.7 && < 5
                     , thesis
                     , text
                     , hsqml


test-suite test-thesis
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  default-language:    Haskell2010
  ghc-options:         -Wall
  build-depends:       base >= 4.7 && < 5
                     , thesis
                     , hspec
                     -- , QuickCheck

benchmark bench-thesis
  type:                exitcode-stdio-1.0
  hs-source-dirs:      bench
  main-is:             Benchmark.hs
  build-depends:       base
                     , thesis
                     , criterion
                     , random
  ghc-options:         -Wall -O2
